tests/baselines/reference/contextualTyping2.errors.txt
tests/cases/compiler/contextualTyping2.ts(1,32): error TS2339: Property 'name' does not exist on type '{ id: number; }'.


==== tests/cases/compiler/contextualTyping2.ts (1 errors) ====
    var foo: {id:number;} = {id:4, name:"foo"};
                                   ~~~~
!!! error TS2339: Property 'name' does not exist on type '{ id: number; }'.